@@ -1,3 +1,8 @@
+Sun Nov 24 09:37:20 2013  Andrew Vit  <andrew@avit.ca>
+
+	* lib/csv.rb: Optimize header hashes by freezing string keys.
+	  [ruby-core:58510]
+
 Sun Nov 24 09:18:06 2013  Aman Gupta <ruby@tmm1.net>
 
 	* ext/objspace/objspace_dump.c (dump_object): Use PRIuSIZE to print
